--- a/html.sharma.html.html
+++ b/html.sharma.html.html
@@ -6,7 +6,7 @@
 
 <h1 style="color:blue;text-align:center">Rohit Sharma</h1>
 
-<img src ="C:\Users\91741\Desktop\Sharma.jpg"
+<img src ="https://akm-img-a-in.tosshub.com/indiatoday/images/story/202110/insta_1.jpg?size=690:388"
 width="200"height="200" style="border:1px solid">
 
 <br>
